# rm_eng_2024

./: .gitignore  README.md  auto_bringup_log.txt  工程视觉问题汇总.md
conda_env/: README.md  condarc  freeze_requirements.txt  requirements.txt  rm_eng_ros.yaml
exchange_ore/: package.xml  setup.cfg  setup.py
exchange_ore/exchange_ore/: exchange_ore.py
ros2_hik_camera/: CMakeLists.txt  README.md  package.xml
ros2_hik_camera/config/: camera_info.yaml  camera_params.yaml
ros2_hik_camera/include/: image_process.hpp  video_recorder_node.hpp
ros2_hik_camera/include/serial/: serial_format.h
ros2_hik_camera/include/yolov8_inference/: .inference.h.swp  _inference.h  gpu_inference.h  inference.h
ros2_hik_camera/launch/: run_algorithm.launch.py  video_stream.launch.py
ros2_hik_camera/src/: _calibration.cpp  _image_process.cpp  calibration.cpp  hik_camera_node.cpp  image_process.cpp  image_process_node.cpp  video_capturer.cpp  video_recorder_node.cpp
ros2_hik_camera/src/serial/impl/list_ports/: list_ports_linux.cc
ros2_hik_camera/src/yolov8_inference/: .inference.cpp.swo  .inference.cpp.swp  _inference.cpp  _inference.h  gpu_inference.cpp  inference.cpp  inference.h
ros2_hik_camera/tensorrt_api/include/: engine.h
ros2_hik_camera/tensorrt_api/src/: engine.cpp
ros2_hik_camera/tensorrt_cpp_api/include/: .engine.h.swp  _6.0_engine.h  _TX_engine.h  engine.h
ros2_hik_camera/tensorrt_cpp_api/src/: _6.0_engine.cpp  _TX_engine.cpp  engine.cpp
ros2_rgbd_camera/: CMakeLists.txt  package.xml
ros2_rgbd_camera/src/: oak_camera.cpp
