<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hik_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1513503320@qq.com">Lithesh</maintainer>
  <license>TODO: License declaration</license>

  <!-- buildtool_depend: dependencies of the build process -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- depend: build, export, and execution dependency -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>
  <depend>camera_info_manager</depend>

  <exec_depend>camera_calibration</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
